objects/Default_Step_Tracker_Records__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Applicable_Orgs__c</fullName>
        <inlineHelpText>All SF Environments to which this default step is applicable</inlineHelpText>
        <label>Applicable Orgs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Salesforce Components - VF, Apex classes, objects etc</description>
        <inlineHelpText>Salesforce Components - VF, Apex classes, objects etc</inlineHelpText>
        <label>Component</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Step_Type__c</fullName>
        <defaultValue>&apos;Other&apos;</defaultValue>
        <label>Step Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Steps_to_perform__c</fullName>
        <label>Steps to perform</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>defaultStepNumber__c</fullName>
        <label>defaultStepNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Default Step Tracker Records</label>
</CustomObject>